create list + photo of product

--- a/index_project.html
+++ b/index_project.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<!-- <div id="CDT"></div>-->
+ <div id="CDT"></div>
 <body>
 <header>
     <div class="container-fluid">
@@ -63,9 +63,17 @@
                         Пантомакс – каменный стояк
                         для неприличных рекордов
                     </h3>
+                    <ul>
+                        <li><i class="fas fa-check-circle"></i>Мощная эрекция и потенция</li>
+                        <li><i class="fas fa-check-circle"></i>Занимайся сексом сколько хочешь</li>
+                        <li><i class="fas fa-check-circle"></i>Получай космические оргазмы</li>
+                        <li><i class="fas fa-check-circle"></i>Гарантированный стояк
+                            до 3-х часов</li>
+                    </ul>
+                    <img src="images/product.png">
                 </div>
                 <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-4"><div id="CDT"></div></div>
             </div>
 
         </div>
