create count + description

--- a/index_project.html
+++ b/index_project.html
@@ -23,7 +23,6 @@
 
 </head>
 
- <div id="CDT"></div>
 <body>
 <header>
     <div class="container-fluid">
@@ -58,7 +57,7 @@
                 </div>
             </div>
             <div class="row description">
-                <div class="col-md-4">
+                <div class="col-md-4 list_and_product">
                     <h3>
                         Пантомакс – каменный стояк
                         для неприличных рекордов
@@ -68,14 +67,30 @@
                         <li><i class="fas fa-check-circle"></i>Занимайся сексом сколько хочешь</li>
                         <li><i class="fas fa-check-circle"></i>Получай космические оргазмы</li>
                         <li><i class="fas fa-check-circle"></i>Гарантированный стояк
-                            до 3-х часов</li>
+                            до 3-х часов
+                        </li>
                     </ul>
                     <img src="images/product.png">
                 </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"><div id="CDT"></div></div>
-            </div>
+                <div class="col-md-4 sale"></div>
+                <div class="col-md-4 count_and_form">
+                    <div class="count" id="CDT"></div>
 
+                    <div class="notification">
+                        <p>*Всего упаковок
+                            по акции</p>
+
+                    </div>
+                    <div class="contact_form">
+                        <form action="" method="post" >
+                            <input type="text" name="name"  placeholder="Введите ваше имя">
+                            <input type="tel" name="phone_num" placeholder="Введите номер телефона">
+                            <button type="submit" style="background-color: black; color: #FFFFFF; height: 30px; width: 65px; ">Заказать сейчас</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </header>
