--- a/index_project.html
+++ b/index_project.html
@@ -14,12 +14,12 @@
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" media="screen" href="css/normalize.css"/>
     <link rel="stylesheet" media="screen" href="css/style.css"/>
-
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Sans:400,700|Roboto:500" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <script src="js/countdown.js"></script>
+   <!-- <script src="js/countdown.js"></script>-->
 
 </head>
 
@@ -83,9 +83,28 @@
                     </div>
                     <div class="contact_form">
                         <form action="" method="post" >
+                            <div class="form_head">
+                                <div class="price">
+                                    <h6>
+                                        Полная цена
+                                    </h6>
+                                    <h4>
+                                        1980руб
+                                    </h4>
+                                </div>
+                                <div class="price">
+                                    <h6>
+                                        Цена со скидкой
+                                    </h6>
+                                    <h4>
+                                        990руб
+                                    </h4>
+                                </div>
+                            </div>
                             <input type="text" name="name"  placeholder="Введите ваше имя">
                             <input type="tel" name="phone_num" placeholder="Введите номер телефона">
-                            <button type="submit" style="background-color: black; color: #FFFFFF; height: 30px; width: 65px; ">Заказать сейчас</button>
+                            <button type="submit"><i class="fas fa-angle-right"></i>Заказать сейчас</button>
+                            <p><i class="fas fa-lock"></i> Ваши данные под защитой SecureTECH</p>
                         </form>
                     </div>
                 </div>
