--- a/index_project.html
+++ b/index_project.html
@@ -72,7 +72,16 @@
                     </ul>
                     <img src="images/product.png">
                 </div>
-                <div class="col-md-4 sale"></div>
+                <div class="col-md-4 sale">
+                    <img src="images/50.png">
+                    <h3>Ваша потенция вернется через 21 день
+                        применения! Проверьте сами
+                    </h3>
+
+
+
+
+                </div>
                 <div class="col-md-4 count_and_form">
                     <div class="count" id="CDT"></div>
 
