create first line of section

--- a/index_project.html
+++ b/index_project.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-   <!-- <script src="js/countdown.js"></script>-->
+    <!-- <script src="js/countdown.js"></script>-->
 
 </head>
 
@@ -72,13 +72,13 @@
                     </ul>
                     <img src="images/product.png">
                 </div>
-                <div class="col-md-4 sale">
-                    <img src="images/50.png">
-                    <h3>Ваша потенция вернется через 21 день
-                        применения! Проверьте сами
-                    </h3>
-
-
+                <div class="col-md-4 sale ">
+                    <div class="discount text-center">
+                        <img src="images/50.png">
+                        <h3>Ваша потенция вернется через 21 день<br>
+                            применения! Проверьте сами
+                        </h3>
+                    </div>
 
 
                 </div>
@@ -91,7 +91,7 @@
 
                     </div>
                     <div class="contact_form">
-                        <form action="" method="post" >
+                        <form action="" method="post">
                             <div class="form_head">
                                 <div class="price">
                                     <h6>
@@ -110,7 +110,7 @@
                                     </h4>
                                 </div>
                             </div>
-                            <input type="text" name="name"  placeholder="Введите ваше имя">
+                            <input type="text" name="name" placeholder="Введите ваше имя">
                             <input type="tel" name="phone_num" placeholder="Введите номер телефона">
                             <button type="submit"><i class="fas fa-angle-right"></i>Заказать сейчас</button>
                             <p><i class="fas fa-lock"></i> Ваши данные под защитой SecureTECH</p>
@@ -122,6 +122,46 @@
         </div>
     </div>
 </header>
+<section>
+    <div class="question">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-md-12">
+                        <h2>
+                            Проблема
+                        </h2>
+                        <h2>
+                             ума
+                        </h2>
+                        <h2>
+                             или
+                        </h2>
+                        <h2>
+                             тела
+                        </h2>
+                        <h2>
+                            ?
+                        </h2>
+                        <h4>
+                            Ответьте всего на 2 вопроса и узнайте свой тип импотенции
+                        </h4>
+                        <div class="question_block">
+                            <span>1</span>
+                            <h4>
+                                Как уменьшалась эрекция?
+
+                            </h4>
+                            <a href="#">Постепенно</a>
+                            <a href="#">Внезапно</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
