create question block

--- a/index_project.html
+++ b/index_project.html
@@ -125,36 +125,28 @@
 <section>
     <div class="question">
         <div class="container-fluid">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-md-12">
-                        <h2>
-                            Проблема
-                        </h2>
-                        <h2>
-                             ума
-                        </h2>
-                        <h2>
-                             или
-                        </h2>
-                        <h2>
-                             тела
-                        </h2>
-                        <h2>
-                            ?
-                        </h2>
+            <div class="container ">
+                <div class="row  ">
+                    <div class="col-md-12 text-center">
+
+                        <h2>Проблема</h2>
+                        <h2>ума</h2>
+                        <h2>или</h2>
+                        <h2>тела</h2>
+                        <h2>?</h2>
                         <h4>
                             Ответьте всего на 2 вопроса и узнайте свой тип импотенции
                         </h4>
-                        <div class="question_block">
+                        <div class="question_block text-center">
                             <span>1</span>
-                            <h4>
+                            <span>
                                 Как уменьшалась эрекция?
 
-                            </h4>
-                            <a href="#">Постепенно</a>
-                            <a href="#">Внезапно</a>
-
+                            </span>
+                            <div class="buttons">
+                                <a href="#">Постепенно</a>
+                                <a href="#">Внезапно</a>
+                            </div>
                         </div>
                     </div>
                 </div>
