--- a/index_project.html
+++ b/index_project.html
@@ -153,6 +153,91 @@
             </div>
         </div>
     </div>
+    <div class="girl">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="product_description">
+                            <h2>
+                                Panto<span>MAX</span> – максимальное
+                                удовольствие в сексе
+                            </h2>
+                            <p>
+                                <span>Пантовые орешки</span> – экопродукт, в состав которого входят натуральные
+                                компоненты. Препарат абсолютно совместим с клеточными жидкостями, быстро проникает в
+                                кровь и начинает действовать уже через 30 минут. Биогенный комплекс орешек действует на
+                                половые и репродуктивные функции мужского организма, эндокринные функции, гормональный
+                                статус. Также Название оказывает многоплановое действие на функции
+                                и состояние мозга, сердечно-сосудистой, пищеварительной, нервной, иммунной систем.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row string">
+                    <div class="col-md-12 text-center">
+                        <h2>
+                            <span>Преимущества</span> пантовых орешек <span>Panto</span><span>MAX</span>
+                        </h2>
+                    </div>
+                </div>
+                <div class="row examples">
+                    <div class="col-md-5"></div>
+                    <div class="col-md-2">
+                        <div class="adv_block">
+                            <img src="images/im_1.png">
+                            <h4>Дарит яркие<br>
+                                оргазмы</h4>
+                        </div>
+
+                        <div class="adv_block">
+                            <img src="images/im_4.png">
+                            <h4>Улучшает<br>
+                                кровообращение<br>
+                                в организме
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="adv_block">
+                            <img src="images/im_2.png">
+                            <h4>Нормализует<br>
+                                гормональный фон</h4>
+                        </div>
+
+                        <div class="adv_block">
+                            <img src="images/im_5.png">
+                            <h4>Повышает тонус<br>
+                                и жизненные силы</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="adv_block">
+                        <img src="images/im_3.png">
+                        <h4>Избавляет от эректильной<br>
+                            дисфункции </h4>
+                    </div>
+
+                        <div class="adv_block">
+                            <img src="images/im_6.png">
+                            <h4>
+                                Регулирует либидо<br>
+                                и желание
+                            </h4>
+                        </div>
+                </div>
+                    <div class="col-md-12"></div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </section>
 
 </body>
