create doctor block/ first vers

--- a/index_project.html
+++ b/index_project.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <!-- <script src="js/countdown.js"></script>-->
+     <script src="js/countdown.js"></script>
 
 </head>
 
@@ -219,10 +219,10 @@
                     </div>
                     <div class="col-md-2">
                         <div class="adv_block">
-                        <img src="images/im_3.png">
-                        <h4>Избавляет от эректильной<br>
-                            дисфункции </h4>
-                    </div>
+                            <img src="images/im_3.png">
+                            <h4>Избавляет от эректильной<br>
+                                дисфункции </h4>
+                        </div>
 
                         <div class="adv_block">
                             <img src="images/im_6.png">
@@ -231,11 +231,36 @@
                                 и желание
                             </h4>
                         </div>
+                    </div>
+
                 </div>
-                    <div class="col-md-12"></div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="doctor">
+
+                            <h2>
+                                Мнение <span>врача</span>
+                            </h2>
+                            <p>
+                                50% мужчин до 35 лет имеют проблемы с эрекцией. Поэтому при первых же признаках
+                                необходимо брать быка за рога и решать проблему.
+                                Я своим пациентам советую пантовые орешки Пантомакс, это натуральный препарат,
+                                который отлично влияет не только на потенцию, но и на весь организм.
+                                При приеме Пантомакс у мужчины нормализуется работа сосудов и повышается потенция.
+                                Одним из действий препарата также является улучшение психоэмоциональной составляющей
+                                сексуальной жизни. Препарат поможет поддержать эрекцию во время всего полового акта.
+                                При этом эффект пантовых орешков не зависит от времени их приема.
+
+                             </p>
+                            <p>Ильнур Мухазин, врач-андролог, к.м.н.</p>
+                            <img src="images/sign.png">
+                        </div>
+
+
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
 </section>
