create mob vers

--- a/index_project.html
+++ b/index_project.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-     <script src="js/countdown.js"></script>
+    <script src="js/countdown.js"></script>
 
 </head>
 
@@ -29,19 +29,19 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-4 col-xs-12">
                     <a href="#">
                         <img src="images/golden_deer&PANTOMAX.png">
                     </a>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 col-sm-4 col-xs-6">
                     <img src="images/leaf.png">
                     <h5>
                         100%
                     </h5>
                     натурально
                 </div>
-                <div class="col-md-5"><img src="images/hand.png">
+                <div class="col-md-5 col-sm-4 col-xs-6"><img src="images/hand.png">
                     <h5>
                         100%
                     </h5>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 col-sm-12 col-xs-12">
                     <h1>
                         Сколько раз за ночь ты можешь?
 
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="row description">
-                <div class="col-md-4 list_and_product">
+                <div class="col-md-4 col-sm-6 col-xs-12 list_and_product">
                     <h3>
                         Пантомакс – каменный стояк
                         для неприличных рекордов
@@ -72,7 +72,7 @@
                     </ul>
                     <img src="images/product.png">
                 </div>
-                <div class="col-md-4 sale ">
+                <div class="col-md-4 hidden-sm hidden-xs sale ">
                     <div class="discount text-center">
                         <img src="images/50.png">
                         <h3>Ваша потенция вернется через 21 день<br>
@@ -82,11 +82,11 @@
 
 
                 </div>
-                <div class="col-md-4 count_and_form">
+                <div class="col-md-4 col-sm-6 col-xs-12 count_and_form">
                     <div class="count" id="CDT"></div>
 
                     <div class="notification">
-                        <p>*Всего упаковок
+                        <p>*Всего упаковок<br>
                             по акции</p>
 
                     </div>
@@ -157,7 +157,7 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="product_description">
                             <h2>
                                 Panto<span>MAX</span> – максимальное
@@ -172,7 +172,12 @@
                                 и состояние мозга, сердечно-сосудистой, пищеварительной, нервной, иммунной систем.
                             </p>
                         </div>
+                        <div class="girl_photo hidden-lg hidden-md ">
+                            <img src="images/girl.png">
+                        </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -187,9 +192,9 @@
                         </h2>
                     </div>
                 </div>
-                <div class="row examples">
-                    <div class="col-md-5"></div>
-                    <div class="col-md-2">
+                <div class="row examples text-center">
+                    <div class="col-md-5 hidden-sm hidden-xs text-center"></div>
+                    <div class="col-md-2 col-sm-4 col-xs-6 text-center">
                         <div class="adv_block">
                             <img src="images/im_1.png">
                             <h4>Дарит яркие<br>
@@ -204,7 +209,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-sm-4 col-xs-6">
                         <div class="adv_block">
                             <img src="images/im_2.png">
                             <h4>Нормализует<br>
@@ -217,7 +222,7 @@
                                 и жизненные силы</h4>
                         </div>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-sm-4 hidden-xs text-center">
                         <div class="adv_block">
                             <img src="images/im_3.png">
                             <h4>Избавляет от эректильной<br>
@@ -235,8 +240,9 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 col-sm-6">
                         <div class="doctor">
+
 
                             <h2>
                                 Мнение <span>врача</span>
@@ -251,17 +257,19 @@
                                 сексуальной жизни. Препарат поможет поддержать эрекцию во время всего полового акта.
                                 При этом эффект пантовых орешков не зависит от времени их приема.
 
-                             </p>
+                            </p>
                             <p>Ильнур Мухазин, врач-андролог, к.м.н.</p>
                             <img src="images/sign.png">
                         </div>
 
+                    </div>
+                    <div class="doctor_photo hidden-lg hidden-md col-sm-6 hidden-xs">
+                        <img src="images/doctor_im.png">
 
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
 
